<resources>
    <string name="app_name">Medication Tracker</string>
    <string name="main_page">Main Menu</string>
    <string name="alarms">Alarms</string>
    <string name="medication_list">Medication List</string>
    <string name="settings">Settings</string>
    <string name="my_medication">My Medication</string>
    <string name="add_new_medication">Add New Medication</string>
    <string name="create_new_medication">Create new Medication</string>
    <string name="medication_name">Medication Name</string>
    <string name="dose_size">Dose size</string>
    <string name="create">Create</string>
    <string name="quantity_in_a_new_prescription">Quantity in a new prescription</string>
    <string name="current_total">Current Total</string>
    <string name="days_between_ordering_and_receiving_nnew_prescriptions">Days between ordering and receiving \nnew prescriptions</string>
</resources>