<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtMainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_page"
        android:textAlignment="center"
        android:textSize="60sp" />

    <Button
        android:id="@+id/btnAlarms"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/alarms"
        android:textSize="48sp" />

    <Button
        android:id="@+id/btnMedicationList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/medication_list"
        android:textSize="48sp" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/settings"
        android:textSize="48sp" />
</LinearLayout>