<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtCreateNewMedication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_medication"
        android:textSize="48sp" />

    <EditText
        android:id="@+id/etxtMedName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/medication_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/etxtDoses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/dose_size"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/etxtWaitTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/days_between_ordering_and_receiving_nnew_prescriptions"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/etxtPrescriptionSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/quantity_in_a_new_prescription"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/etxtCurrentTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/current_total"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#546E7A" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNewMedCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel"
            android:textSize="24sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnCreateNewMed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create"
            android:textSize="24sp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>